discussion/kv_engine/181288/181288_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54127: Correctly scale throttle_seconds_total from us -> s

Erroneously treated as milliseconds instead of microseconds.

Change-Id: Iaf9963d75d013caea3942a6e62df0188c83db1a4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-10-13 14:26:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-10-13 14:32:48.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
File Comment: /PATCHSET_LEVEL -> Can we have a test for this please?
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-13 14:41:34.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21145/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:144:13: error: no matching function for call to "duration_cast" [clang-diagnostic-error]
            duration_cast<double>(microseconds(throttle_wait_time)).count());
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/chrono:224:7: note: candidate template ignored: requirement "__is_duration<double>::value" was not satisfied [with _ToDur = double]
      duration_cast(const duration<_Rep, _Period>& __d)
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21145/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:144:13:
error: no matching function for call to "duration_cast" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21145/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50343/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/buckets.cc(144): error C2672: "duration_cast": no matching overloaded function found ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50343/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42235/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/buckets.cc:144:13:
error: no matching function for call to "duration_cast"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42235/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10877/ : FAILURE

Compile error at [2022-10-13T14:32:22.534Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets.cc:144:13:
error: no matching function for call to "duration_cast"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10877/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10974/ : FAILURE

Compile error at [2022-10-13T14:33:31.444Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/buckets.cc:144:67:
error: no matching function for call to ?duration_cast<double>(std::chrono::microseconds)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10974/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23167/ : FAILURE

Compile error at [2022-10-13T14:31:10.175Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets.cc:144:67:
error: no matching function for call to ?duration_cast<double>(std::chrono::microseconds)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23167/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22576/ : FAILURE

Compile error at [2022-10-13T14:37:43.699Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/buckets.cc:144:13:
error: no matching function for call to "duration_cast"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22576/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24400/ : FAILURE

Compile error at [2022-10-13T14:30:24.225Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets.cc:144:13:
error: no matching function for call to "duration_cast"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24400/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23562/ : FAILURE

Compile error at [2022-10-13T14:32:06.481Z] ../kv_engine/daemon/buckets.cc:144:67:
error: no matching function for call to ?duration_cast<double>(std::chrono::microseconds)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23562/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31581/ : FAILURE

Compile error at [2022-10-13T14:31:19.296Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets.cc:144:13:
error: no matching function for call to "duration_cast"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31581/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20395/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-10-14 12:36:01.000000000
Message: 
Patch Set 1:

(1 comment)
File Comment: /PATCHSET_LEVEL -> Done
----------------------------------------------------------------------------------------------------------------------
